# gboxide

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile  lcov.info
.cargo/: config.toml
.github/workflows/: ci-clippy-strict.yml  ci-linux.yml  ci-macos.yml  ci-wasm.yml  ci-windows.yml  ci.yml
cli/: Cargo.toml
cli/src/: main.rs  tests.rs
cli/tests/: cli_integration.rs
common/: Cargo.toml
common/src/: lib.rs
core/: Cargo.toml
core-lib/: Cargo.toml
core-lib/benches/: cpu_bench.rs  mmu_bench.rs  ppu_bench.rs
core-lib/proptest-regressions/timer/: tests.txt
core-lib/src/: bus.rs  helpers.rs  lib.rs  tests.rs
core-lib/src/apu/: channel1.rs  channel2.rs  channel3.rs  channel4.rs  envelope.rs  flags.rs  mod.rs  sweep.rs  tests.rs  wave_duty.rs
core-lib/src/cartridge/: error.rs  mod.rs  tests.rs  types.rs
core-lib/src/cpu/: mod.rs  opcodes.rs  tests.rs
core-lib/src/cpu/opcodes/: alu.rs  cb.rs  helpers.rs  jump.rs  load_store.rs  mod.rs  types.rs
core-lib/src/interrupts/: mod.rs  tests.rs
core-lib/src/mmu/: input.rs  mbc.rs  mod.rs  tests.rs
core-lib/src/mmu/mbc/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs
core-lib/src/ppu/: color.rs  helpers.rs  lcdc.rs  mod.rs  ppu.rs  ppu_modes.rs  render.rs  sprite.rs  stat.rs  tests.rs
core-lib/src/timer/: mod.rs  test_harness.rs  tests.rs
core-lib/src/timer/snapshots/: core_lib__timer__tests__timer_state_transitions.snap
core-lib/tests/: integration_main.rs  just_cover_misc.rs  mbc.rs  opcode_coverage.rs
core/src/: bus.rs  lib.rs
core/src/cpu/: mod.rs  opcodes.rs  tests.rs
core/src/mmu/: mod.rs  tests.rs
docs/: ROADMAP.md  TODO.md
tests/: Cargo.toml
tests/src/: lib.rs  mooneye_suite.rs
