[workspace]
members  = ["core", "cli", "common", "tests"]
resolver = "2"

[workspace.package]
edition       = "2021"
rust-version  = "1.78.0"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/sm-moshi/gboxide"
homepage      = "https://github.com/sm-moshi/gboxide"
documentation = "https://docs.rs/gboxide"

[profile.dev]
opt-level = 0
debug     = true

[profile.release]
opt-level   = 3
incremental = false
strip       = true
debug       = false
lto         = true

[workspace.lints.clippy]
# Allowed lints (temporarily noisy false positives)
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"

# Warning level lints
missing_docs    = "warn"
unreachable_pub = "warn"
unused_results  = "warn"

# Lint groups with priorities
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }

# Denied lints (completely disallowed)
unwrap_used = "deny"
expect_used = "deny"
todo        = "deny"
dbg_macro   = "deny"
