[package]
name    = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
core-lib = { path = "../core-lib" }
common   = { path = "../common" }

tokio              = { workspace = true }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
winit              = { workspace = true }
anyhow             = { workspace = true }
criterion          = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
assert_cmd        = "2.0.17"
predicates        = "3.1.3"
