[package]
name        = "cli"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Command line interface for the gboxide project"
homepage    = "https://github.com/sm-moshi/gboxide"
repository  = "https://github.com/sm-moshi/gboxide"

[dependencies]
anyhow = { workspace = true }

clap     = { workspace = true }
core-lib = { path = "../core-lib", version = "0.1.0" }
winit    = { workspace = true }

[dev-dependencies]
assert_cmd        = { workspace = true }
predicates        = { workspace = true }
tempfile          = { workspace = true }
test-case         = { workspace = true }
pretty_assertions = { workspace = true }


[lints]
workspace = true
