[package]
name        = "common"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Common code for the gboxide project"
homepage    = "https://github.com/sm-moshi/gboxide"
repository  = "https://github.com/sm-moshi/gboxide"

[dependencies]
core-lib = { path = "../core-lib", version = "0.1.0" }
