[package]
name         = "core-lib"
version      = "0.1.0"
edition      = "2021"
description  = "Core Game Boy and Game Boy Color emulation logic"
license      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
common = { path = "../common" }

# Use workspace dependencies where possible
bitflags  = { workspace = true }
thiserror = { workspace = true }
log       = { workspace = true }
anyhow    = { workspace = true }

# Direct dependencies
once_cell         = "1.21.3"
pastey            = "0.1.0"
pretty_assertions = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
default = ["cgb"]
# Hardware variants
cgb = [] # Game Boy Color support
dmg = [] # Original Game Boy support
# Optional features
debug   = []                        # Enable debug logging and assertions
testing = ["dep:pretty_assertions"] # Enable test-specific functionality

[lints]
workspace = true
