[package]
name         = "core-lib"
version      = "0.1.0"
description  = "Core Game Boy and Game Boy Color emulation logic"
edition      = "2021"
homepage     = "https://github.com/sm-moshi/gboxide"
repository   = "https://github.com/sm-moshi/gboxide"
license      = "MIT OR Apache-2.0"
rust-version = "1.78.0"

[dependencies]
bitflags           = { workspace = true }
thiserror          = { workspace = true }
log                = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
proptest           = { workspace = true }
test-case          = { workspace = true }
insta              = { workspace = true }

once_cell         = { workspace = true }
pastey            = { workspace = true }
pretty_assertions = { workspace = true, optional = true }

[dev-dependencies]
proptest          = { workspace = true }
test-case         = { workspace = true }
insta             = { workspace = true }
pretty_assertions = { workspace = true }

[features]
default = ["cgb"]
cgb     = []                        # Game Boy Color support
dmg     = []                        # Original Game Boy support
debug   = []                        # Enable debug logging and assertions
testing = ["dep:pretty_assertions"] # Enable test-specific functionality

[lints]
workspace = true
