[package]
name    = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags  = "2.9"
log       = { version = "0.4", optional = true }
serde     = { version = "1.0", features = ["derive"], optional = true }
once_cell = "1.21"
paste     = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = ["cgb"]
cgb     = []
dmg     = []
serde   = ["dep:serde"]
logging = ["log"]
