# Integration test crate for gboxide emulator
# Provides Mooneye GB and other hardware-accuracy test harnesses

[package]
name    = "tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow             = { workspace = true }
bitflags           = { workspace = true }
core-lib           = { path = "../core-lib", version = "0.1.0" }
log                = { workspace = true }
pretty_assertions  = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
anyhow             = { workspace = true }
bitflags           = { workspace = true }
log                = { workspace = true }
pretty_assertions  = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
