# Integration test crate for gboxide emulator
# Provides Mooneye GB and other hardware-accuracy test harnesses

[package]
name    = "tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow   = { workspace = true }
core-lib = { path = "../core-lib", version = "0.1.0" }
tracing  = { workspace = true }

[dev-dependencies]
anyhow  = { workspace = true }
tracing = { workspace = true }
